--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	width: 99vw;
 	text-align: center;
-	background-image: url('/bg.jpg');
+	background-image: url('bg.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-clip: border-box;
